Register functionality have integrated Login functionality have integrated Working update password

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --open",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "watch": "webpack-dev-server --watch"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "vee-validate": "^2.2.8",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
